--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,12 +33,11 @@ footer {
 .home-bg {
     background-image: url('/pictures/home.jpg');
 
+    background-size: cover;
     background-repeat: no-repeat;
-   left: 0;
-    right: 0;
+    background-position: 50% 50%;
     width: 100%;
-    height: 100%;
-    margin-top: 0;
+    height: 100vh;
 }
 
 .slogan {
@@ -91,6 +90,14 @@ footer {
     border-top-left-radius: 0.6rem;
     border-top-right-radius: 0.6rem;
     height: 200px;
+}
+.img-edd {
+    padding-bottom: 3%;
+    border-top-left-radius: 0.6rem;
+    border-top-right-radius: 0.6rem;
+    border-bottom-left-radius: 0.6rem;
+    border-bottom-right-radius: 0.6rem;
+    width: 50%; height: 50%;
 }
 
 .card-img-top {
