--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,46 +36,43 @@
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
-">
-<a class="navbar-brand" href="{{ path('home') }}"><img class="logo" src="{{ asset('pictures/logo.png') }}"
-                                                       alt="Logo"></a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
-        aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse ml-auto" id="navbarColor01">
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item mt-3 mt-lg-0">
-            <a class="nav-link" href="{{ path('home') }}">Accueil</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="{{ path('home') }}"><img class="logo" src="{{ asset('pictures/logo.png') }}"
+                                                           alt="Logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse ml-auto" id="navbarColor01">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item mt-3 mt-lg-0">
+                <a class="nav-link" href="{{ path('home') }}">Accueil</a>
 
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="/#tricks">Tricks</a>
-        </li>
-        {% if not app.user %}
-            <li class="nav-item">
-                <a class="nav-link" href="/connexion">Connexion</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/inscription">Inscription</a>
             </li>
 
-        {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="/profile">Profil</a>
+                <a class="nav-link" href="/#tricks">Tricks</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/add/trick">Ajouter un trick</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/deconnexion">Déconnexion</a>
-            </li>
-        {% endif %}
-    </ul>
-</div>
+            {% if not app.user %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/connexion">Connexion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/inscription">Inscription</a>
+                </li>
+
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/add/trick">Ajouter un trick</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/deconnexion">Déconnexion</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
 </nav>
+
 
 <div class="page-header row">
     <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
