--- a/templates/trick/add.html.twig
+++ b/templates/trick/add.html.twig
@@ -47,26 +47,21 @@
                                         <div class="form-group col-md-6 text-center">
                                             <p>Cliquez pour ajouter une image</p>
                                             {{ form_widget(form.pictures) }}
-                                            <input type="hidden" id="image-counter" value="0" >
+                                            <input type="hidden" id="image-counter" value="0">
                                             <div class="form-group mt-2">
-                                                <button type="button" class="btn btn-outline-success" id="add-image">
+                                                <button type="button" class="btn btn-outline-success" id="add-image">Ajouter une image</button>
 
-                                                    Ajouter une image
-                                                </button>
-                                                <input type="file" multiple="multiple" name="pictures">
-
-                                                <span class="counter-image text-danger"></span>
                                             </div>
                                         </div>
                                         <div class="form-group col-md-6 text-center">
                                             <p>Cliquez pour ajouter une vidéo Youtube</p>
-                                            {{ form_widget(form.name) }}
+                                            {{ form_widget(form.videos) }}
                                             <input type="hidden" id="video-counter" value="0">
                                             <div class="form-group mt-2">
                                                 <button type="button" class="btn btn-outline-success" id="add-video">
                                                     Ajouter une vidéo
                                                 </button>
-                                                <span class="counter-video text-danger"></span>
+
                                             </div>
                                         </div>
                                     </div>
