--- a/templates/trick/show.html.twig
+++ b/templates/trick/show.html.twig
@@ -3,8 +3,8 @@
 {% block title %}SnowTricks - {{ trick.name }}{% endblock %}
 
 {% block body %}
-<!-- Start Trick -->
-<div class="container mt-5">
+    <!-- Start Trick -->
+    <div class="container mt-5">
     <div class="row justify-content-center mt-5">
         <div class="col-md-12 col-md-offset-1 mt-5 mb-4">
             {% for message in app.flashes('success') %}
@@ -17,149 +17,156 @@
                 </div>
             {% endfor %}
             <div class="card mt-3">
-            <h3 class="row justify-content-center mt-3 "><strong>{{ trick.name }}</strong></h3>
+                <h3 class="row justify-content-center mt-3 "><strong>{{ trick.name }}</strong></h3>
 
-            <div class="card mt-3">
-                <div>
-                    <img class="card-img-top" src="{{ trick.picture }}" alt="{{ trick.name }}-main">
-                    {% if app.user %}
-                        <a href="{{ path('edit.trick', {id: trick.id}) }}"
-                           style="float: right"
-                           class="far fa-edit cursor trick-link"></a>
+                <div class="card mt-3">
+                    <div>
+                        <img class="card-img-top" src="{{ trick.picture }}" alt="{{ trick.name }}-main">
+                        {% if app.user %}
+                            <a href="{{ path('edit.trick', {id: trick.id}) }}"
+                               style="float: right"
+                               class="far fa-edit cursor trick-link"></a>
 
-                        <a href="{{ path('delete.trick', {id: trick.id}) }}"
-                           style="float: right"
-                           onclick="return confirm('Vous êtes sûr?')"
-                           class="far fa-trash cursor trick-link"></a>
-                    {% endif %}
-                </div>
+                            <a href="{{ path('delete.trick', {id: trick.id}) }}"
+                               style="float: right"
+                               onclick="return confirm('Vous êtes sûr?')"
+                               class="far fa-trash cursor trick-link"></a>
+                        {% endif %}
+                    </div>
 
 
-                <div class="card-body">
-                    {% if app.user %}
-                        <div class="blog-comments__actions mt-3">
-                            <div class="btn-group btn-group-sm">
-                                {% for message in app.flashes('success') %}
-                                    <div class="alert alert-success">
-                                        {{ message }}
-                                    </div>
-                                {% endfor %}
-
-                            </div>
-                        </div>
-                    {% endif %}
-
-                    <hr>
-
-                    <!-- Start Carousel -->
-
-                    <div class="row d-none d-lg-flex load-media">
-                        <div class="col-lg-6 col-md-12">
-                            <div id="carousel" class="carousel slide mt-3 mb-2" data-ride="carousel">
-                                <ol class="carousel-indicators">
-
-                                    <li data-target=".carousel" data-slide-to=class="active"></li>
-
-                                </ol>
-                                <div class="carousel-inner enlarge">
-
-                                    <div class="carousel-item  active ">
-                                        <img class="d-block" src="/pictures/360.jpg" alt="{{ trick.name }}-image-">
-                                    </div>
+                    <div class="card-body">
+                        {% if app.user %}
+                            <div class="blog-comments__actions mt-3">
+                                <div class="btn-group btn-group-sm">
+                                    {% for message in app.flashes('success') %}
+                                        <div class="alert alert-success">
+                                            {{ message }}
+                                        </div>
+                                    {% endfor %}
 
                                 </div>
-                                <a class="carousel-control-prev" href="#carousel" data-slide="prev">
-                                    <span class="carousel-control-prev-icon"></span>
-                                </a>
-                                <a class="carousel-control-next" href="#carousel" data-slide="next">
-                                    <span class="carousel-control-next-icon"></span>
-                                </a>
                             </div>
-                        </div>
-                        <div class="col-lg-6 col-md-12">
-                            <div id="carousel-v" class="carousel slide mt-3 mb-2" data-ride="carousel">
-                                <ol class="carousel-indicators">
+                        {% endif %}
 
-                                    <li data-target="#carousel-v" data-slide-to="" class="active"></li>
+                        <hr>
 
-                                </ol>
-                                <div class="carousel-inner">
+                        <!-- Start Carousel -->
+                        {% if (pictures) or (videos) %}
+                        <div class="row d-none d-lg-flex load-media">
+                            <div class="col-lg-6 col-md-12">
+                                <div id="carousel" class="carousel slide mt-3 mb-2" data-ride="carousel">
+                                    <ol class="carousel-indicators">
+                                        {% for picture in pictures %}
+                                            <li data-target=".carousel"
+                                                data-slide-to="{{ loop.index0 }}" {% if loop.index0 == 0 %} class="active" {% endif %}></li>
+                                        {% endfor %}
+                                    </ol>
+                                    <div class="carousel-inner enlarge">
+                                        {% for picture in pictures %}
+                                            <div class="carousel-item {% if loop.index0 == 0 %} active {% endif %}">
+                                                <img class="d-block" src={{ picture.name }} alt="{{ trick.name }}">
 
-                                    <div class="carousel-item  active ">
-                                        <iframe src="" allowfullscreen></iframe>
+                                            </div>
+                                        {% endfor %}
                                     </div>
-
+                                    <a class="carousel-control-prev" href="#carousel" data-slide="prev">
+                                        <span class="carousel-control-prev-icon"></span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carousel" data-slide="next">
+                                        <span class="carousel-control-next-icon"></span>
+                                    </a>
                                 </div>
-                                <a class="carousel-control-prev" href="#carousel-v" data-slide="prev">
-                                    <span class="carousel-control-prev-icon"></span>
-                                </a>
-                                <a class="carousel-control-next" href="#carousel-v" data-slide="next">
-                                    <span class="carousel-control-next-icon"></span>
-                                </a>
+                            </div>
+                            <div class="col-lg-6 col-md-12">
+                                <div id="carousel-v" class="carousel slide mt-3 mb-2" data-ride="carousel">
+                                    <ol class="carousel-indicators">
+                                        {% for video in trick.videos %}
+                                            <li data-target="#carousel-v"
+                                                data-slide-to="{{ loop.index0 }}" {% if loop.index0 == 0 %} class="active" {% endif %}></li>
+                                        {% endfor %}
+                                    </ol>
+                                    <div class="carousel-inner">
+                                        {% for video in trick.videos %}
+                                            <div class="carousel-item {% if loop.index0 == 0 %} active {% endif %}">
+                                                <iframe src="{{ video.url }}" allowfullscreen></iframe>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carousel-v" data-slide="prev">
+                                        <span class="carousel-control-prev-icon"></span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carousel-v" data-slide="next">
+                                        <span class="carousel-control-next-icon"></span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="text-center">
-                        <a href="#" id="loadMedia" class="d-md-block d-lg-none">
-                            <button class="btn btn-outline-secondary">Afficher les médias</button>
-                        </a>
-                        <a href="#" id="hideMedia" class="d-none d-md-none d-lg-none">
-                            <button class="btn btn-outline-secondary mt-3">Masquer les médias</button>
-                        </a>
-                    </div>
-
-                    <div class="row justify-content-center">
-                        <div class="d-inline-block text-center no-medias">
-                            <p class="mt-3 ml-3 mr-3">Pas de médias pour ce trick</p>
+                        <div class="text-center">
+                            <a href="#" id="loadMedia" class="d-md-block d-lg-none">
+                                <button class="btn btn-outline-secondary">Afficher les médias</button>
+                            </a>
+                            <a href="#" id="hideMedia" class="d-none d-md-none d-lg-none">
+                                <button class="btn btn-outline-secondary mt-3">Masquer les médias</button>
+                            </a>
                         </div>
-                    </div>
+                        {% else %}
+                        <div class="row justify-content-center">
+                            <div class="d-inline-block text-center no-medias">
+                                <p class="mt-3 ml-3 mr-3">Pas de médias pour ce trick</p>
+                            </div>
+                        </div>
 
-                    <!-- End Carousel -->
-                    <hr>
-                    <h5>Description</h5>
-                    <p class="card-text text-justify">{{ trick.description }}</p>
-                    <div class="row">
+                        {% endif %}
 
-                        <div class="col-md-10 ml-auto mr-auto mb-5 text-center ">
-                            <h5>
-                                <span class="btn btn-outline-dark">Groupe de trick : {{ trick.type.name }}</span>
-                            </h5>
+                        <!-- End Carousel -->
+                        <hr>
+                        <h5>Description</h5>
+                        <p class="card-text text-justify">{{ trick.description }}</p>
+                        <hr>
+                        <div class="row">
 
-                            <span class="btn btn-outline-primary btn-sm">Publié le : {{ trick.Createdat | date('d-m-Y') }}</span>
+                            <div class="col-md-10 ml-auto mr-auto mb-5 text-center ">
+                                <h5>
+                                    <span class="btn btn-outline-dark">Groupe de trick : {{ trick.type.name }}</span>
+                                </h5>
+
+                                <span class="btn btn-outline-primary btn-sm">Publié le : {{ trick.Createdat | date('d-m-Y') }}</span>
 
                                 <span class="btn btn-outline-success btn-sm"><small>Mise à jour le
                                 : {% if trick.updatedAt is defined %}{{ trick.updatedAt | date('d/m/Y') }}{% endif %}</small></span>
 
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!--  End Trick -->
+                <!--  End Trick -->
 
-            <!-- Start Comment Add Form -->
-            {% if app.user %}
-                <div class="col-lg-12 px-0 mb-30">
-                    <div class="cment Divpadding">
-                        <h6 class="mb-30">Bonjour {{ app.user.username }} !</h6>
-                        {{ form_start(form) }}
-                        <div class="form-group">
-                            {{ form_row(form.contenu) }}
+                <!-- Start Comment Add Form -->
+                {% if app.user %}
+                    <div class="col-lg-12 px-0 mb-30">
+                        <div class="cment Divpadding">
+                            <h6 class="mb-30">Bonjour {{ app.user.username }} !</h6>
+                            {{ form_start(form) }}
+                            <div class="form-group">
+                                {{ form_row(form.contenu) }}
+                            </div>
+                            <div class="form-group text-center">
+                                <button type="submit" class="btn btn-success mt-3">Commenter</button>
+                            </div>
+                            {{ form_end(form) }}
                         </div>
-                        <div class="form-group text-center">
-                            <button type="submit" class="btn btn-success mt-3">Commenter</button>
+                    </div>
+                {% else %}
+                    <div class="col-md-12 px-0 mb-30">
+                        <div class="comments text-center p-3">
+                            <p><a href="{{ path('security_registration') }}">Inscrivez-vous</a> ou <a
+                                        href="{{ path('user_login') }}">connectez vous</a> pour commenter cet article
+                            </p>
                         </div>
-                        {{ form_end(form) }}
                     </div>
-                </div>
-            {% else %}
-                <div class="col-md-12 px-0 mb-30">
-                    <div class="comments text-center p-3">
-                        <p><a href="{{ path('security_registration') }}">Inscrivez-vous</a> ou <a
-                                    href="{{ path('user_login') }}">connectez vous</a> pour commenter cet article</p>
-                    </div>
-                </div>
-            {% endif %}
-            <!-- Start Comment Add Form -->
+                {% endif %}
+                <!-- Start Comment Add Form -->
 
                 <!-- Start Comments -->
                 <span class="comments-anchor" id="comments-block"></span>
@@ -172,7 +179,8 @@
                                     <span class="comment-anchor" id="{{ comment.id }}"></span>
                                     <li>
                                         <div class="entry-comments-item">
-                                            <img src="/pictures/avatar-default.jpg" class="entry-comments-avatar" alt="">
+                                            <img src="/pictures/avatar-default.jpg" class="entry-comments-avatar"
+                                                 alt="">
                                             <div class="entry-comments-body">
                                                 <span class="entry-comments-author"></span>
                                                 <span class="comment-date">le {{ comment.createdAt | date('d/m/Y') }} à {{ comment.createdAt | date('H:i') }}</span>
@@ -184,20 +192,20 @@
                             </ul>
 
 
-
                             {% if display %}
-                            <div class="container mb-30">
-                                <div class="row justify-content-center m-3" id="comments">
-                                    <a href="{{ path('all.comments',{id: trick.id}) }}#comments" class="btn btn-primary trick-link">Voir plus...</a>
+                                <div class="container mb-30">
+                                    <div class="row justify-content-center m-3" id="comments">
+                                        <a href="{{ path('all.comments',{id: trick.id}) }}#comments"
+                                           class="btn btn-primary trick-link">Voir plus...</a>
+                                    </div>
                                 </div>
-                            </div>
                             {% endif %}
                         </div>
                     </div>
                 </div>
                 <!-- End Comments -->
             </div>
+        </div>
     </div>
-</div>
 
 {% endblock %}
