--- a/templates/trick/edit.html.twig
+++ b/templates/trick/edit.html.twig
@@ -50,7 +50,7 @@
 
                                                 </div>
                                                 {% endfor %}
-                                                <input type="hidden" id="image-counter" value="0">
+                                                <input type="hidden" id="image-counter" value="{{ pictures|length }}">
                                                 <div class="form-group mt-2 pb-2">
                                                     <button type="button" class="btn btn-outline-success" id="add-image">Ajouter une image</button>
 
@@ -74,7 +74,7 @@
                                                     {% endfor %}
                                                 </div>
 
-                                                <input type="hidden" id="video-counter" value="0">
+                                                <input type="hidden" id="video-counter" value="{{ videos|length }}">
                                                 <div class="form-group mt-2">
                                                     <button type="button" class="btn btn-outline-success" id="add-video">Ajouter une vidéo</button>
 
