--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,22 +74,25 @@
 </nav>
 
 
+
+<!-- End Navbar -->
 <div class="page-header row">
     <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
         <span class="text-uppercase page-subtitle">{% block subtitle %}Sous-Titre{% endblock %}</span>
         <h3 class="page-title">{% block mainTitle %}Titre{% endblock %}</h3>
     </div>
 </div>
-<!-- End Navbar -->
+
 <div class="row">
     {% block body %}
     {% endblock body %}
 </div>
 <!-- Start Footer -->
-
+<div class="row">
 <footer class="container-fluid text-center">
     <p>© COPYRIGHT</p>
 </footer>
+</div>
 
 
 <!-- End Footer -->
