--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %}Snowtricks - Connexion{% endblock %}
 {% block body %}
     <div class="container login">
         <div class="card card-small mb-4 ">
@@ -47,11 +48,5 @@
             </div>
         </div>
     </div>
-
-
-
-
 {% endblock %}
-
-
 
