--- a/templates/emails/forgot-password.html.twig
+++ b/templates/emails/forgot-password.html.twig
@@ -9,7 +9,7 @@ Vous avez demandé à réinitialiser votre mot de passe, si ce n'est pas le cas 
 <br>
 Veuillez cliquer sur le lien ci-dessous copiez le dans la barre d'adresse de votre navigateur pour réinitialiser votre mot de passe :
 <br>
-{{adress}}/reset-password?id={{ token }}
+{{adress}}:8000/reset-password?id={{ token }}
 <br>
 Cordialement,
 
