--- a/templates/user/registration.html.twig
+++ b/templates/user/registration.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}Snowtricks - Inscription{% endblock %}
 {% block body %}
     <div class="container registration">
         <div class="card card-small mb-4">
@@ -38,12 +38,10 @@
                         </div>
                     </div>
                 </div>
-                </li>
-                </ul>
             </div>
         </div>
     </div>
-    </div>
+
 {% endblock %}
 
 
